<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="settings"
        app:title="@string/setting_general">

        <SwitchPreferenceCompat
            app:key="theme"
            app:icon="@drawable/ic_dark"
            app:defaultValue="true"
            app:title="@string/dark_theme_title"
            app:summary="@string/dark_theme_summary" />

        <SwitchPreferenceCompat
            app:key="icon"
            app:icon="@drawable/ic_launch"
            app:defaultValue="false"
            app:title="@string/hide_icon_title"
            app:summary="@string/hide_icon_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="summary"
        app:title="@string/setting_about">

        <Preference
            app:key="developer"
            app:icon="@drawable/ic_developer"
            app:title="@string/setting_developer_title"
            app:summary="@string/setting_developer" />

        <Preference
            app:key="version"
            app:icon="@drawable/ic_version"
            app:title="@string/settings_version_title" />

        <Preference
            app:key="arch"
            app:icon="@drawable/ic_arch"
            app:title="@string/settings_arch_title" />

        <Preference
            app:key="lic"
            app:icon="@drawable/ic_license"
            app:title="@string/settings_lic_title"
            app:summary="@string/setting_lic_desc" />

    </PreferenceCategory>

</PreferenceScreen>