<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_margin="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:padding="32sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:background="@drawable/frame">

            <ImageView
                android:layout_width="@dimen/img_width_height"
                android:layout_height="@dimen/img_width_height"
                android:contentDescription="@string/icon"
                android:padding="90sp"
                android:tint="?attr/appColorAccent"
                app:srcCompat="@drawable/ic_permission"
                tools:ignore="UseAppTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slideTitle6"
                android:textColor="?attr/appColorAccent"
                android:textSize="@dimen/slide_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/slideDesc6"
                android:textAlignment="center"
                android:textColor="@color/backgroundText"
                android:textSize="@dimen/slide_desc" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
